Send a Balance Notice to users

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -23,6 +23,7 @@ en:
   hello: "Hello world"
   links:
     bill: "Bill"
+    balance_notice: "Balance Notice"
   time:
     formats:
       YMD_Day: '%Y-%m-%d %A'
